# smart_schedule_medical

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  cov.xml  gym_test.db  mypy.ini  pyproject.toml  pytest.ini  schedule_medical.db
.run/: Python tests for test_doctor_crud.test_register_new_doctor_success.run.xml
src/: app.py
src/api/doctor/: models.py  repository.py  routers.py  service.py
src/api/patient/: models.py  repository.py  routers.py  service.py
src/api/schedule/: repository.py  routers.py  service.py
src/api/specialty/: models.py  repository.py  routers.py  service.py
src/infra/: database.py
src/utils/: erros_util.py  settings.py
tests/: test_doctor_crud.py  test_specialty.py
tests/doctor/: gym_test.db
